feat: add maxCollateralDescDepth parameter to format()